# GSagent

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/: DEVELOPMENT_STRATEGY.md
docs/adr/: ADR-0001-stack-and-workflow.md
docs/changelog/: CHANGELOG.md  DEVELOPMENT_LOG.md
docs/delivery/: ACCEPTANCE_TRACE_MATRIX.md  AGENT_FULL_PICTURE.md  CAPABILITY_GAP_AND_UPGRADE_PLAN.md  DELIVERY_DOC_MAP.md  DEMO_10MIN_SCRIPT.md  ENGINEERING_QA_SOP.md  MVP_ACCEPTANCE_CHECKLIST.md  OVERALL_PLAN.md  PRD_HIGH_STANDARD_GS_AGENT.md  REAL_DATA_RUNBOOK.md  RELEASE_MILESTONE_P0_P2.md  REQ_BACKLOG_FILLED.md
docs/references/: animal-gs-gold-standard.md  openai-compatible-llm-gateway.md
packaging/native/: .env.example  README.md  environment.yml
packaging/release/: README_OFFLINE.md  build_offline_bundle.sh
packaging/runtime/: README.md  build_cli_runtime_bundle.sh  environment.yml  install_runtime.sh
packaging/singularity/: Apptainer.def  README.md  build_sif.sh  run_examples.sh
scripts/: install_easy_gsagent.sh  install_global_gsagent.sh
scripts/delivery/: run_phase_a_acceptance.py
scripts/native/: demo_run.sh  preflight.sh  prepare_pig_trait_csv.py  real_data_contract_check.py  start_api.sh  worker_loop.py
skills/animal-gs-gold-standard/: SKILL.md
skills/openai-compatible-llm-gateway/: SKILL.md
src/animal_gs_agent/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/e2e/: p0_covariate_recommendation.md  p0_early_stop_reason.md  p0_qc_blocking.md  p0_trace_visibility.md  p1_abort_and_fallback.md  p1_preventive_actions.md  p2_observability_audit.md  (+1 more)
(+141 files in other folders)
